[package]
name = "nntp"
version = "0.1.0"
edition = "2021"

[features]
default = ["connect"]
connect = ["stream", "tokio/net"]
native-tls = ["native-tls-crate", "tokio-native-tls", "stream"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "tokio-rustls", "stream"]
stream = []

[dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["io-util"] }
tokio-codec = "0.1.2"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.56"

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.11"

[dependencies.rustls]
optional = true
version = "0.22.2"

[dependencies.rustls-native-certs]
optional = true
version = "0.7.0"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.1"

[dependencies.tokio-rustls]
optional = true
version = "0.25.0"

[dependencies.webpki-roots]
optional = true
version = "0.26.1"

